# NdkDaily

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/alie/ndkdaily/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/local/: trans_opencv_util.cpp  trans_opencv_util.h
app/src/main/java/com/alie/ndkdaily/: MainActivity.kt  MySurfaceView.kt  NativeLoad.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/alie/ndkdaily/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
